# xmr-status

./: Cargo.toml  README.md
src/: main.rs  monero.rs
static/: status.css
templates/: status.html
