[package]
name = "xmr-status"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", default-features = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
toml = "0.8"
tower-http = { version = "0.6.6", features = ["fs"] }
zmq = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
